--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -8,20 +8,21 @@
     <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
     <link rel="stylesheet" type="text/css" href="styles/5-filters.css"/>
-    <link rel="icon" href="images/icon.png"/>
+    <link rel="icon" href="images/icon.png" type="image/png"/>
 </head>
 <body>
     <header>
+        <div class="logo"></div>
     </header>
         <div class="container">
             <section class="filters">
                 <div class="locations">
                     <h3>States</h3>
-                    <h4>California, Arizona..</h4>
+                    <h4>California, Arizona...</h4>
                 </div>
                 <div class="amenities">
                     <h3>Ammenites</h3>
-                    <h4>Internet, Kitchen..</h4>
+                    <h4>Internet, Kitchen...</h4>
                 </div>
                 <button>Search</button>
             </section>
@@ -31,4 +32,3 @@
     </footer>
 </body>
 </html>
-
