--- a/web_static/6-index.html
+++ b/web_static/6-index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" type="text/css" href="styles/4-common.css"/>
     <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
     <link rel="stylesheet" type="text/css" href="styles/6-filters.css"/>
-    <link rel="stylesheet" type="text.css" href="styles/3-footer.css"/>
-    <link rel="icon" href="images/icon.png"/>
+    <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
+    <link rel="icon" href="images/icon.png" type="image/png"/>
     <title>Airbnb clone</title>
 </head>
 <body>
     <header>
+        <div class="logo"></div>
     </header>
     <div class="container">
         <section class="filters">
@@ -22,30 +23,30 @@
                     <li>
                         <h2>Arizona:</h2>
                         <ul>
-                            <li>Page</li>
-                            <li>Page2</li>
+                            <li>Phoenix</li>
+                            <li>Sedona</li>
                         </ul>
                     </li>
                     <li>
-                        <h2>California</h2>
+                     <li><h2>California</h2></li>
                         <ul>
-                            <li>San Francisco</li>
-                            <li>Los Altos</li>
+                            <li>San Hose</li>
+                            <li>Sacramento</li>
                         </ul>
                     </li>
                 </ul>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>Internet, Kitchen..</h4>
+                <h4>Internet, Kitchen...</h4>
                 <ul class="popover">
-                    <li>Internet</li>
                     <li>Tv</li>
                     <li>Kitchen</li>
+                    <li>Internet</li>
                     <li>Iron</li>
                 </ul>
             </div>
-            <button>Search</button>
+            <button type="button">Search</button>
         </section>
     </div>
     <footer>
