--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,65 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/4-common.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/6-filters.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/7-places.css"/>
-    <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
-    <link rel="icon" href="images/icon.png"/>
-    <title>Airbnb clone</title>
-</head>
-<body>
-    <header>
-    </header>
-    <div class="container">
-        <section class="filters">
-            <div class="amenities">
-                <ul class="popover">
-                    <li>Internet</li>
-                    <li>Kitchen</li>
-                    <li>Laundry</li>
-                </ul>
-                <button>Search</button>
-                <h3>Ammenites</h3>
-                <h4>Internet, Kitchen..</h4>
-            </div>
-            <div class="locations">
-                <ul class="popover">
-                    <li><h2>California</h2>
-                        <ul>
-                            <li>San Hose</li>
-                            <li>Sacramento</li>
-                        </ul>
-                    </li>
-                    <li><h2>Delaware</h2>
-                        <ul>
-                            <li>Newark</li>
-                            <li>Dover</li>
-                        </ul>
-                    </li>
-                </ul>
-                <h3>States</h3>
-                <h4>California, Arizona..</h4>
-            </div>
-        </section>
-        <section class="places">
-            <h1>Places</h1>
-            <article>
-                <h2>My Home</h2>
-            </article>
-            <article>
-                <h2>A suite</h2>
-            </article>
-            <article>
-                <h2>Tiny House</h2>
-            </article>
-        </section>
-    </div>
-    <footer>
-        <p>Best School</p>
-    </footer>
-</body>
+    <head>
+        <title>AirBnb Clone</title>
+        <link rel="stylesheet" href="styles/4-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="stylesheet" href="styles/6-filters.css">
+        <link rel="stylesheet" href="styles/7-places.css">
+        <link rel="icon" href="images/icon.png" type="image/png">
+    </head>
+    <body>
+        <header>
+            <div class="logo"></div>
+        </header>
+        <div class="container">
+            <section class="filters">
+                <div class="locations">
+                    <h3>States</h3>
+                    <h4>California, Arizona...</h4>
+                    <ul class="popover">
+                        <li><h2>Arizona:</h2></li>
+                        <li>
+                            <ul class="my_popover_list">
+                                <li>Phoenix</li>
+                                <li>Sedona</li>
+                            </ul>
+                        </li>
+                        <li><h2>California:</h2></li>
+                        <li>
+                            <ul class="my_popover_list">
+                                <li>San Hose</li>
+                                <li>Sacramento</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="amenities">
+                    <h3>Amenities</h3>
+                    <h4>Internet, Kitchen...</h4>
+                    <ul class="popover">
+                        <li>TV</li>
+                        <li>Iron</li>
+                        <li>Internet</li>
+                        <li>Kitchen </li>
+                    </ul>
+                </div>
+                <button type="button">Search</button>
+            </section>
+            <section class="places">
+                <div class="My_places">
+                    <h1>Places</h1>
+                </div>
+                <div class="articles">
+                    <article>
+                        <h2>A suite</h2>
+                    </article>
+                    <article>
+                        <h2>My Home</h2>
+                    </article>
+                    <article>
+                        <h2>Tiny House</h2>
+                    </article>
+                </div>
+            </section>
+        </div>
+        <footer>
+            Best School
+        </footer>
+    </body>
 </html>
