--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" type="text/css" href="styles/3-header.css"/>
     <link rel="stylesheet" type="text/css" href="styles/3-footer.css"/>
     <link rel="stylesheet" type="text/css" href="styles/6-filters.css"/>
-    <link rel="icon" href="images/icon.png"/>
+    <link rel="icon" href="images/icon.png" type="image/png"/>
     <title>Airbnb clone</title>
 </head>
 <body>
     <header>
+        <div class="logo"></div>
     </header>
     <div class="container">
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>California, Arizona..</h4>
+                <h4>California, Arizona...</h4>
                 <ul class="popover">
                     <li>
                         <h2>Delaware</h2>
@@ -38,14 +39,14 @@
             </div>
             <div class="amenities">
                 <h3>Ammenites</h3>
-                <h4>Internet, Kitchen..</h4>
+                <h4>Internet, Kitchen...</h4>
                 <ul class="popover">
                     <li>Internet</li>
                     <li>Kitchen</li>
                     <li>Laundry</li>
                 </ul>
-                <button>Search</button>
             </div>
+            <button>Search</button>
         </section>
         <section class="places">
             <h1>Places</h1>
@@ -66,7 +67,7 @@
                     </div>
                 </div>
                 <div class="user">
-                    <p><b>Owner: </b>Dev tYnOe</p>
+                    <p><b>Owner: </b>Chijiokem Olisa</p>
                 </div>
                 <div class="description">
                     <p>My Home is a cozy retreat, perfect for a couple's getaway. The bedroom, living area, and fully equipped kitchen offer all the comforts of home. Enjoy a private bathroom and a lovely outdoor patio.</p>
@@ -81,7 +82,7 @@
                     <div class="max_guest">
                         <p>2 guests</p>
                     </div>
-                    <div class "number_rooms">
+                    <div class="number_rooms">
                         <p>1 bedroom</p>
                     </div>
                     <div class="number_bathrooms">
@@ -89,7 +90,7 @@
                     </div>
                 </div>
                 <div class="user">
-                    <p><b>Owner: </b>Benzo Man</p>
+                    <p><b>Owner: </b>Chidera Leona</p>
                 </div>
                 <div class="description">
                     <p>Experience the charm of Tiny House living! Our little house offers a cozy retreat with a well-appointed bedroom, small kitchenette, and a bathroom. Step outside to a private patio to enjoy the fresh air.</p>
@@ -112,7 +113,7 @@
                     </div>
                 </div>
                 <div class="user">
-                    <p><b>Owner: </b>Bogyman</p>
+                    <p><b>Owner: </b>Kelechi Charles</p>
                 </div>
                 <div class="description">
                     <p>Our luxurious Suite offers spacious living with two bedrooms, a well-appointed kitchen, and two elegant bathrooms. Perfect for couples or small groups, relax in style and enjoy the comfort of your own private space.</p>
