--- a/web_static/101-index.html
+++ b/web_static/101-index.html
@@ -94,7 +94,7 @@
                     <h2>3 Reviews</h2>
                     <ul>
                         <li>
-                            <h3>From Grace Neke the 10th of July 2022</h3>
+                            <h3>From Grace Nweke the 10th of July 2022</h3>
                             <p>I had the sweetest time there, went there with my friends for a weekend get-away and it didn't disappoint. The amenities were as advertised. I recommend. 5 stars!</p>
                         </li>
                         <li>
